--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,21 +1,18 @@
 {% set version = "0.4.4" %}
-{% set gh_org = "audreyr" %}
-{% set gh_repo = "binaryornot" %}
-
 
 package:
-  name: {{ gh_repo }}
+  name: binaryornot
   version: {{ version }}
 
 source:
-  fn: {{ gh_repo }}-{{ version }}.tar.gz
-  url: https://pypi.org/packages/source/{{ gh_repo[0] }}/{{ gh_repo }}/{{ gh_repo }}-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/b/binaryornot/binaryornot-{{ version }}.tar.gz
   sha256: 359501dfc9d40632edc9fac890e19542db1a287bbcfa58175b66658392018061
 
 build:
-  noarch: python
   number: 2
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  noarch: python
+  script:
+    - {{ PYTHON }} -m pip install . --no-deps -vv --no-build-isolation --disable-pip-version-check
 
 requirements:
   host:
@@ -23,26 +20,24 @@ requirements:
     - python {{ python_min }}
     - setuptools
   run:
-    - python >={{ python_min }}
     - chardet
+    - python >={{ python_min }}
 
 test:
-  source_files:
-    - .
   requires:
-    - coverage
-    - hypothesis
+    - pip
     - python {{ python_min }}
-    - setuptools
+  imports:
+    - binaryornot
   commands:
-    - python setup.py test
+    - pip check
+    - python -c "import binaryornot; assert binaryornot.__version__ == '{{ version }}'"
 
 about:
-  home: https://github.com/{{ gh_org }}/{{ gh_repo }}
+  home: https://github.com/audreyr/binaryornot
   license: BSD-3-Clause
-  summary: >
-            Ultra-lightweight pure Python package to check if a file is binary
-            or text.
+  license_file: LICENSE
+  summary: Ultra-lightweight pure Python package to check if a file is binary or text.
 
 extra:
   recipe-maintainers:
